[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.tscn" type="PackedScene" id=1]
[ext_resource path="res://TutorialLayer.gd" type="Script" id=2]
[ext_resource path="res://ui/TextBox.tscn" type="PackedScene" id=3]

[node name="Tutorial" instance=ExtResource( 1 )]

[node name="Grid" parent="." index="1"]
level_coordinates = {
Vector2( 0, 3 ): "tree",
Vector2( 0, 4 ): "rock",
Vector2( 1, 2 ): "rock",
Vector2( 1, 4 ): "sword",
Vector2( 1, 5 ): "rock",
Vector2( 2, 4 ): "bow",
Vector2( 3, 0 ): "crossbow",
Vector2( 5, 1 ): "tree",
Vector2( 5, 4 ): "sword",
Vector2( 6, 5 ): "sword",
Vector2( 7, 0 ): "rock",
Vector2( 7, 1 ): "sword",
Vector2( 7, 5 ): "sword",
Vector2( 8, 0 ): "tree",
Vector2( 9, 4 ): "crossbow",
Vector2( 9, 5 ): "sword",
Vector2( 11, 2 ): "crossbow",
Vector2( 11, 3 ): "bow",
Vector2( 11, 4 ): "rock"
}

[node name="TutorialLayer" type="CanvasLayer" parent="." index="5"]
script = ExtResource( 2 )

[node name="TextBox" parent="TutorialLayer" index="0" instance=ExtResource( 3 )]
visible = false
margin_left = 381.0
margin_top = 68.0
margin_right = -394.0
margin_bottom = -801.0

[connection signal="all_standing" from="Grid" to="TutorialLayer" method="_on_Grid_all_standing"]
[connection signal="soldier_hovered" from="Cursor" to="TutorialLayer" method="_on_Cursor_soldier_hovered"]

[editable path="CanvasLayer/IngameUI"]
